@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*joomla-3.4.0_alpha (03 Dec 2014)
+
+  03 Dec 2014; Harold Naparst <harold@alum.mit.edu> +joomla-3.4.0_alpha.ebuild:
+  Add joomla-3.4.0_alpha.ebuild
+
   09 Oct 2014; Harold Naparst <harold@alum.mit.edu> joomla-3.3.6.ebuild:
   Modified ebuild to reflect discussion in irc. IUSE flags are removed
   from this ebuild because a change of backend db should not force a rebuild
